--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.16",
     "chrono-node": "^2.7.0",
     "dayjs": "^1.11.10",
+    "humanize-duration": "^3.30.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/humanize-duration": "^3.27.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
