--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "chrono-node": "^2.7.0",
     "dayjs": "^1.11.10",
     "humanize-duration": "^3.30.0",
-    "next": "13.5.2",
+    "next": "^14.0.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "5.2.2"
   },
   "devDependencies": {
